# qmsg-backend

./: .env  .env.example  Dockerfile  alembic.ini  init_db.py  requirements.txt  run.py
alembic/: env.py
alembic/versions/: 39a24832d877_add_otp_fields.py  444fb2778100_initial_migration.py
app/: main.py
app/api/v1/endpoints/: auth.py  messages.py  users.py
app/core/: database.py  email.py  security.py
app/core/kyber/: CMakeLists.txt  dll_checker.py  kyber.c  kyber.py
app/models/: models.py
app/schemas/: schemas.py
